2001-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-goto-url): Set 'default-directory' to
	'w3m-profile-directory', if 'url' is local but not exist that directory.

	* w3m-dtree.el (w3m-dtree-create): If 'path' is not a directory,
	display warning message.

2001-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify): Initialize the value of
	`w3m-cache-underline-faces'.
	(w3m-toggle-inline-images): Remove or restore the underlined faces.
	(w3m-cache-underline-faces): New buffer-local variable used to
	cache the detached underlined faces from a buffer.

	* w3m-xmas.el (w3m-insert-image): Detach an underlined face in
	`w3m-cache-underline-faces'.
	* w3m-e21.el (w3m-insert-image): Ditto.

2001-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toggle-inline-images): Restore hidden faces in the
	text property `w3m-hidden-face'.

	* w3m-xmas.el (w3m-setup-header-line): Don't inherit existing text
	properties in a header line.

	* w3m-xmas.el (w3m-insert-image): Hide a face in the text property
	`w3m-hidden-face' if it is underlined, instead of the removing.
	* w3m-e21.el (w3m-insert-image): Ditto.

2001-05-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (top-level): Fixed argument of autoload for `w3m-dtree',
	and added autoload for `w3m-about-dtree'.

	* w3m-dtree.el (w3m-dtree): Fixed doc-string.

2001-05-15  "Takayuki Nakagawa"  <tknakaga@kanagawa.hitachi.co.jp>

	* w3m.el (w3m-goto-ftp-url): Use `file-directory-p' instead of
	file name suffix to distinguish directories and files.
	(w3m-time-parse-string (for buggy timezone.el)): Ignore errors
	occured in `encode-time'.

2001-05-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-dtree.el (top-level): Require `w3m' to suppress byte-compile
	warnings.

2001-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url): Message if there is no link.
	(w3m-cursor-anchor): Redefine as a macro for byte-optimization.