@@ -1,3 +1,13 @@
+2001-05-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el, w3m-antenna.el, w3m-bookmark.el, w3m-dtree.el,
+	w3m-search.el, w3m-weather.el: Fixed document strings of
+	functions.
+
+	* mew-w3m.el (mew-w3m): New customize group.
+	(mew-use-w3m-minor-mode): Use defcustom.
+	(mew-w3m-auto-insert-image): Use defcustom.
+
 2001-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-goto-url): Set 'default-directory' to
